# discoidc

./: .env.example  Cargo.toml
.github/workflows/: release.yml  test.yml
src/: main.rs
